fix: align items center and match use of margins/paddings

--- a/_sass/components/homepage/_announcements.scss
+++ b/_sass/components/homepage/_announcements.scss
@@ -1,5 +1,7 @@
-.announcements-max-width {
+.announcements-section {
   max-width: $container-max-width;
+  flex-direction: column;
+  align-items: center;
 }
 
 .announcements-divider {
